--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -13,8 +13,8 @@
         <div class="header-wrap flex">
             <div class="p1-wrap flex">
                 <div class="logo">
-                    <img src="/images/WebStudio.png" alt="logo">
-                    <!-- <p><span class="logo_elm1">Web</span><span class="logo_elm2">Studio</span></p> -->
+                    <!-- <img src="/images/WebStudio.png" alt="logo"> -->
+                    <p><span class="logo_elm1">Web</span><span class="logo_elm2">Studio</span></p>
                 </div>
                 <div>
                     <nav>
@@ -74,10 +74,16 @@
                 <div class="sec_3-text">
                     <h2 class="text">Чим ми займаємося</h2>
                 </div>
-                <div class="sec_3-img">
-                    <img src="images/img.png" alt="pic_1">
-                    <img src="images/img (1).png" alt="pic_2">
-                    <img src="images/img (2).png" alt="pic_3">
+                <div class="sec_3-img flex">
+                    <div>
+                        <img src="images/img.png" alt="pic_1">
+                    </div>
+                    <div>
+                        <img src="images/img (1).png" alt="pic_2">
+                    </div>
+                    <div>
+                        <img src="images/img (2).png" alt="pic_3">
+                    </div>
                 </div>
             </div>
         </section>
@@ -87,27 +93,25 @@
                 <div class="sec_4-text">
                     <h2 class="text">Наша команда</h2>
                 </div>
-                <div class="sec_4-img">
-                    <img src="images/img-1.jpg" alt="pic_4" width="270px" height="260px">
-                    <img src="images/img (1-1).jpg" alt="pic_5" width="270px" height="260px">
-                    <img src="images/img (2-1).jpg" alt="pic_5" width="270px" height="260px">
-                    <img src="images/img (3-1).jpg" alt="pic_6" width="270px" height="260px">
-                </div>
-                    <div class="flex">
-                    <div>
-                        <h4 class="par_1">Ігор Дем'яненко</h4>
+                    <div class="par flex">
+                    <div class="par-2">
+                        <img src="images/img-1.jpg" alt="pic_4" width="270px" height="260px">
+                        <h4 class="par-1">Ігор Дем'яненко</h4>
                         <p class="par_1">Product Designer</p>
                     </div>
-                    <div>
-                        <h4 class="par_2">Ольга Рєпіна</h4>
+                    <div class="par-3">
+                        <img src="images/img (1-1).jpg" alt="pic_5" width="270px" height="260px">
+                        <h4 class="par-2_2">Ольга Рєпіна</h4>
                         <p class="par_2">Frontend Developer</p>
                     </div>
-                    <div>
-                        <h4 class="par_3">Микола Тарасов</h4>
+                    <div class="par-3">
+                        <img src="images/img (2-1).jpg" alt="pic_5" width="270px" height="260px">
+                        <h4 class="par-3-2">Микола Тарасов</h4>
                         <p class="par_3">Marketing</p>
                     </div>
-                    <div>
-                        <h4 class="par_4">Михайло Єрмаков</h4>
+                    <div class="par-3">
+                        <img src="images/img (3-1).jpg" alt="pic_6" width="270px" height="260px">
+                        <h4 class="par-4">Михайло Єрмаков</h4>
                         <p class="par_4">UI Designer</p>
                     </div>
                 </div>
@@ -117,8 +121,8 @@
 <!----------------------------------------------- footer --------------------------------------------------->
     <footer>
         <div class="footer">
-            <div>
-                <img src="images/WebStudio.png" alt="logo_2">
+            <div class="logo-2">
+                <h2><span>Web</span>Studio</h2>
             </div>
             <ul class="menu_2">
                 <li class="adress">м. Київ, пр-т Лесі Українки, 26</li>
